<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="4HK-Gp-8CL">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Login View Controller-->
        <scene sceneID="KA1-kq-tRG">
            <objects>
                <viewController id="4HK-Gp-8CL" customClass="LoginViewController" customModule="TestingDemo" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="SQN-8Y-R5y">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AEy-oT-gUU">
                                <rect key="frame" x="0.0" y="55" width="375" height="254"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Testing Demo" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ccx-8g-twR">
                                        <rect key="frame" x="103" y="20" width="169" height="36"/>
                                        <fontDescription key="fontDescription" type="system" weight="thin" pointSize="30"/>
                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="eOw-X8-7tB">
                                        <rect key="frame" x="28" y="86" width="319" height="168"/>
                                        <subviews>
                                            <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="n1b-jk-jHB">
                                                <rect key="frame" x="0.0" y="0.0" width="319" height="30"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kqo-0v-Qcz">
                                                        <rect key="frame" x="0.0" y="0.0" width="79" height="30"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ypY-DX-t7g">
                                                        <rect key="frame" x="99" y="0.0" width="220" height="30"/>
                                                        <accessibility key="accessibilityConfiguration" label="Username"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits" textContentType="username"/>
                                                    </textField>
                                                </subviews>
                                            </stackView>
                                            <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="9kI-MR-Bad">
                                                <rect key="frame" x="0.0" y="50" width="319" height="30"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8kH-eg-vdS">
                                                        <rect key="frame" x="0.0" y="0.0" width="79" height="30"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GP2-1w-rmL">
                                                        <rect key="frame" x="99" y="0.0" width="220" height="30"/>
                                                        <accessibility key="accessibilityConfiguration" label="Password"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                                    </textField>
                                                </subviews>
                                            </stackView>
                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="AiG-El-6H6">
                                                <rect key="frame" x="0.0" y="100" width="319" height="68"/>
                                                <subviews>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PcU-vY-U84">
                                                        <rect key="frame" x="0.0" y="0.0" width="319" height="30"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="app.buttons.login"/>
                                                        <state key="normal" title="Log In"/>
                                                        <connections>
                                                            <action selector="didTapLogin:" destination="4HK-Gp-8CL" eventType="touchUpInside" id="vuF-j1-OBq"/>
                                                        </connections>
                                                    </button>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zoR-Gn-0or">
                                                        <rect key="frame" x="0.0" y="38" width="319" height="30"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="app.buttons.signup"/>
                                                        <state key="normal" title="Sign Up"/>
                                                        <connections>
                                                            <action selector="didTapSignup:" destination="4HK-Gp-8CL" eventType="touchUpInside" id="LLp-9G-TfW"/>
                                                        </connections>
                                                    </button>
                                                </subviews>
                                            </stackView>
                                        </subviews>
                                        <constraints>
                                            <constraint firstItem="GP2-1w-rmL" firstAttribute="width" secondItem="ypY-DX-t7g" secondAttribute="width" id="aAF-iq-Twu"/>
                                        </constraints>
                                    </stackView>
                                </subviews>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
                                    <constraint firstItem="ccx-8g-twR" firstAttribute="top" secondItem="AEy-oT-gUU" secondAttribute="top" constant="20" id="2Pt-0O-JEH"/>
                                    <constraint firstAttribute="bottom" secondItem="eOw-X8-7tB" secondAttribute="bottom" id="hvP-E5-x9G"/>
                                    <constraint firstItem="ccx-8g-twR" firstAttribute="centerX" secondItem="AEy-oT-gUU" secondAttribute="centerX" id="psd-2a-dnu"/>
                                    <constraint firstItem="eOw-X8-7tB" firstAttribute="top" secondItem="ccx-8g-twR" secondAttribute="bottom" constant="30" id="sJI-dq-9Rm"/>
                                    <constraint firstAttribute="trailingMargin" secondItem="eOw-X8-7tB" secondAttribute="trailing" constant="20" id="uHk-SH-bDi"/>
                                    <constraint firstItem="eOw-X8-7tB" firstAttribute="leading" secondItem="AEy-oT-gUU" secondAttribute="leadingMargin" constant="20" id="vLt-ND-txU"/>
                                </constraints>
                            </view>
                        </subviews>
                        <color key="backgroundColor" red="0.95294117649999999" green="0.95294117649999999" blue="0.95294117649999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="NhL-ZM-QR0" firstAttribute="top" secondItem="AEy-oT-gUU" secondAttribute="top" constant="-35" id="dU5-SV-dyG"/>
                            <constraint firstItem="NhL-ZM-QR0" firstAttribute="trailing" secondItem="AEy-oT-gUU" secondAttribute="trailing" id="ssQ-0n-7sC"/>
                            <constraint firstItem="AEy-oT-gUU" firstAttribute="leading" secondItem="NhL-ZM-QR0" secondAttribute="leading" id="tTQ-Oe-Lw0"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="NhL-ZM-QR0"/>
                    </view>
                    <connections>
                        <outlet property="loadingView" destination="Ash-5z-AXh" id="3Df-EE-kDX"/>
                        <outlet property="passwordTextField" destination="GP2-1w-rmL" id="Fbk-Ch-y7g"/>
                        <outlet property="usernameTextField" destination="ypY-DX-t7g" id="8xh-b5-hHe"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="ttC-IL-D5T" sceneMemberID="firstResponder"/>
                <view contentMode="scaleToFill" id="Ash-5z-AXh">
                    <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                    <subviews>
                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Q0N-MX-bI4">
                            <rect key="frame" x="38.5" y="39" width="163.5" height="50.5"/>
                            <subviews>
                                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="6gI-FZ-kBD">
                                    <rect key="frame" x="72" y="0.0" width="20" height="20"/>
                                </activityIndicatorView>
                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Checking Credentials" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hBe-ah-oDC">
                                    <rect key="frame" x="0.0" y="30" width="163.5" height="20.5"/>
                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                    <nil key="highlightedColor"/>
                                </label>
                            </subviews>
                        </stackView>
                    </subviews>
                    <color key="backgroundColor" white="0.0" alpha="0.60046553938356162" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <constraints>
                        <constraint firstItem="Q0N-MX-bI4" firstAttribute="centerX" secondItem="ob9-DV-AlJ" secondAttribute="centerX" id="Ezd-qO-Abm"/>
                        <constraint firstItem="Q0N-MX-bI4" firstAttribute="centerY" secondItem="ob9-DV-AlJ" secondAttribute="centerY" id="YUo-xj-7fD"/>
                    </constraints>
                    <viewLayoutGuide key="safeArea" id="ob9-DV-AlJ"/>
                </view>
            </objects>
            <point key="canvasLocation" x="345" y="380"/>
        </scene>
    </scenes>
</document>
