...
    
    func hideLoadingView() {
        loadingView.removeFromSuperview()
    }
    
    func displayWelcomePrompt() {
        let close = UIAlertAction(title: "Close",
                                  style: .cancel,
                                  handler: nil)
        
        let alert = UIAlertController(title: "Welcome",
                                      message: "Welcome to this awesome app!",
                                      preferredStyle: .alert)
        alert.addAction(close)
        
        show(alert, sender: self)
    }
...
